# ccx-collab

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ko.md  README.md  cc-collab-interactive-learning.html  ccx-collab-interactive-learning.html  docker-compose.yml  pyproject.toml  requirements.txt
.codex/environments/: environment.toml
.github/workflows/: agent-orchestrator.yml  docker-publish.yml  publish-pypi.yml
agent/: README.ko.md  README.md  pipeline-config.json
agent/schemas/: cli-envelope.schema.json  implement-result.schema.json  plan-result.schema.json  retrospect.schema.json  review-result.schema.json  task.schema.json
agent/scripts/: claude-wrapper.ps1  claude-wrapper.sh  cleanup-results.ps1  cleanup-results.sh  codex-wrapper.ps1  codex-wrapper.sh  integration-test.sh  orchestrate.py  pipeline-runner.ps1  pipeline-runner.sh  setup-hooks.sh
agent/tasks/: README.md  documentation-update.task.json  example.task.json  multi-stage-refactor.task.json  phase2-implementation.task.json  simple-feature.task.json  testing-infrastructure.task.json
agent/tests/: conftest.py  pipeline.Tests.ps1  test_cleanup.py  test_orchestrate.py  test_schemas.py  test_wrappers.py
cc_collab/: __init__.py  bridge.py  cli.py  config.py  output.py
cc_collab/commands/: __init__.py  pipeline.py  stages.py  tools.py
cc_collab/web/: __init__.py  app.py  db.py  mermaid.py  webhook.py
cc_collab/web/locales/en/: messages.json
cc_collab/web/locales/ko/: messages.json
cc_collab/web/routes/: __init__.py  dashboard.py  history.py  pipeline.py  tasks.py  webhooks.py
cc_collab/web/static/: style.css
cc_collab/web/templates/: base.html
cc_collab/web/templates/history/: charts.html  detail.html  list.html
cc_collab/web/templates/pipeline/: monitor.html  run.html  status.html
cc_collab/web/templates/settings/: webhooks.html
cc_collab/web/templates/tasks/: detail.html  list.html
ccx_collab/: __init__.py  cli.py  config.py  output.py
ccx_collab/commands/: __init__.py  pipeline.py  stages.py  tools.py
ccx_collab/web/: __init__.py  app.py  db.py  i18n.py  models.py  sse.py  webhook.py
ccx_collab/web/locales/en/: messages.json
ccx_collab/web/locales/ko/: messages.json
ccx_collab/web/routes/: __init__.py  cleanup.py  config.py  dashboard.py  health.py  history.py  logs.py  pipeline.py  results.py  stages.py  tasks.py  webhooks.py  wizard.py
ccx_collab/web/static/: style.css
ccx_collab/web/templates/: base.html  dashboard.html  logs.html
docs/: CCX_COLLAB_CLI.md  CC_COLLAB_CLI.md  CONFIGURATION.md  RESUME_CHECKPOINT.md
docs/examples/: cc-collab.full.yaml  cc-collab.minimal.yaml  ccx-collab.full.yaml  ccx-collab.minimal.yaml
scripts/: cc-collab-completion.bash  cc-collab-completion.zsh  ccx-collab-completion.bash  ccx-collab-completion.zsh
tests/test_cc_collab/: __init__.py  conftest.py  test_bridge.py  test_cli.py  test_commands.py  test_mermaid.py  test_web.py  test_webhook.py
tests/test_ccx_collab/: __init__.py  conftest.py  test_bridge.py  test_cleanup_routes.py  test_cli.py  test_commands.py  test_config_routes.py  test_health_routes.py  test_logs_routes.py  test_mermaid.py  test_results_routes.py  test_stages_routes.py  test_web.py  test_webhook.py  test_webhook_dispatch.py  test_wizard.py
(+21 files in other folders)
