[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cc-collab"
version = "0.1.0"
description = "CLI tool for Claude Code + Codex CLI collaboration pipeline"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "jsonschema>=4.0",
]

[project.scripts]
cc-collab = "cc_collab.cli:main"

[tool.setuptools.packages.find]
include = ["cc_collab*"]
